<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black_shade_1"
tools:context=".Add">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILKey"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter key"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILName"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter Name"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course price-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILAge"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter Age"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/purple_200"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:boxStrokeColor="@color/purple_200" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course suited for-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILGender"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter Gender"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course image link-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILContact"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter Contact"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course link-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILAccress"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="Enter Address"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--button for adding a new course-->
        <Button
            android:id="@+id/idBtnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_back"
            android:text="@string/add"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_back"
            android:text="@string/read"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_back"
            android:text="@string/update"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_back"
            android:text="@string/delete"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_back"
            android:text="@string/logout"
            android:textAllCaps="false" />

    </LinearLayout>

    <!--progress bar for loading indicator-->
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone" />

</RelativeLayout>
</ScrollView>